<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ledgerPic"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/ledger_pic"
        android:src="@drawable/ic_user" />

    <EditText
        android:id="@+id/ledgerNameEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:background="@drawable/text_view_bg"
        android:ems="10"
        android:hint="@string/ledger_name"
        android:inputType="textPersonName"
        android:padding="5dp" />

    <EditText
        android:id="@+id/ledgerOpeningBalEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/text_view_bg"
        android:ems="10"
        android:hint="@string/ledger_opening_balance"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="5dp" />

    <EditText
        android:id="@+id/ledgerMobileEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/text_view_bg"
        android:ems="10"
        android:hint="@string/ledger_mobile"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteLedgerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:backgroundTint="#C2185B"
            android:fontFamily="monospace"
            android:text="@string/delete"
            android:textStyle="bold"
            app:elevation="10dp" />

        <Button
            android:id="@+id/updateLedgerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:backgroundTint="#66C1B6"
            android:fontFamily="monospace"
            android:text="@string/update"
            android:textStyle="bold"
            app:elevation="10dp" />
    </LinearLayout>

</LinearLayout>