<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:elevation="12dp"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    app:cardBackgroundColor="@color/grey">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ledgerProfileImage"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_user"
            app:civ_border_width="2dp"
            app:civ_border_color="#7E7777"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ledgerNameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ledger_name"
                android:padding="5dp"
                android:textColor="#674A4A"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ledgerMoblieTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ledger_mobile"
                android:paddingLeft="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rsTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:text="@string/rs"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ledgerBlrTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/ledger_opening_balance"
                    android:paddingLeft="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>